[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-douyin"
version = "0.1.0"
description = "Douyin (抖音) platform plugin for Hermes Agent"
requires-python = ">=3.10,<3.13"
dependencies = [
    "social-auto-upload>=0.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_douyin"]
