[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-douyin"
version = "0.1.0"
description = "Douyin (抖音) platform plugin for Hermes Agent"
requires-python = ">=3.10,<3.13"
dependencies = [
    "loguru>=0.7.0",
    "patchright>=1.50.0",
    "opencv-python>=4.10.0",
    "qrcode>=8.0",
    "segno>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_douyin"]
